--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -55,7 +55,15 @@
           </a>
         </li>
       {% endif %}
-
+      
+      
+        <li>
+          <a href="https://scholar.google.cl/citations?user=SCurOT4AAAAJ&hl=en" itemprop="sameAs">
+            <i class="ai ai-google-scholar"></i> Google Scholar
+          </a>
+        </li>
+      
+      
       {% if author.keybase %}
         <li>
           <a href="https://keybase.io/{{ author.keybase }}" itemprop="sameAs" rel="nofollow noopener noreferrer me">
