--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -59,7 +59,7 @@
       
         <li>
           <a href="https://scholar.google.cl/citations?user=SCurOT4AAAAJ&hl=en" itemprop="sameAs">
-            <i class="ai ai-google-scholar"></i> Google Scholar
+            <i class="ai ai-google-scholar"></i><span class="label">Google Scholar</span>
           </a>
         </li>
       
