--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -62,7 +62,12 @@
             <i class="ai ai-google-scholar"></i><span class="label">Google Scholar</span>
           </a>
         </li>
-      
+
+        <li>
+          <a href="https://inspirehep.net/authors/1426027" itemprop="sameAs">
+            <i class="ai ai-inspire"></i><span class="label">iNspire</span>
+          </a>
+        </li>      
       
       {% if author.keybase %}
         <li>
