--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -27,8 +27,8 @@
     <ul class="author__urls social-icons">
       {% if author.location %}
         <li itemprop="homeLocation" itemscope itemtype="https://schema.org/Place">
-          <i class="fas fa-fw fa-map-marker-alt" style="color:red" aria-hidden="true"></i> <span itemprop="name" class="p-locality">{{ author.location }}</span>
-        </li>
+          <i class="fal fa-map-marker-alt" style="color:red" aria-hidden="true"></i> <span itemprop="name" class="p-locality">{{ author.location }}</span>
+        </li> 
       {% endif %}
 
       {% if author.links %}
