--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -27,7 +27,7 @@
     <ul class="author__urls social-icons">
       {% if author.location %}
         <li itemprop="homeLocation" itemscope itemtype="https://schema.org/Place">
-          <i class="fal fa-fw fa-map-marker-alt" style="color:red" aria-hidden="true"></i> <span itemprop="name" class="p-locality">{{ author.location }}</span>
+          <i class="fas fa-fw fa-map-marker-alt" style="color:red" aria-hidden="true"></i> <span itemprop="name" class="p-locality">{{ author.location }}</span>
         </li> 
       {% endif %}
 
