--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -24,6 +24,7 @@ $monospace: Monaco, Consolas, "Lucida Console", monospace !default;
 /* sans serif typefaces */
 $sans-serif-narrow: $sans-serif !default;
 $helvetica: Helvetica, "Helvetica Neue", Arial, sans-serif !default;
+$gillsans: "Gill Sans", "Gill Sans MT", Calibri, sans-serif !default;
 
 /* serif typefaces */
 $georgia: Georgia, serif !default;
