--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -33,7 +33,7 @@ $bodoni: "Bodoni MT", serif !default;
 $calisto: "Calisto MT", serif !default;
 $garamond: Garamond, serif !default;
 
-$global-font-family: $helvetica !default;
+$global-font-family: $gillsans !default;
 $header-font-family: $sans-serif !default;
 $caption-font-family: $serif !default;
 
