--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -136,6 +136,7 @@
   img {
     max-width: 210px;
     border-radius: 2%;
+    min-width: 50px;
 
     @include breakpoint($large) {
       padding: 0px;
