--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,7 +14,7 @@ footer {
 }
 
 /* Ensure the avatar image does not get too small on mobile */
-.avatar {
+.author__avatar {
   width: 210px;  /* Default size for larger screens */
   height: auto;
 
