--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,3 +23,8 @@ footer {
     min-width: 80px; /* Ensures it doesn't shrink below this size */
   }
 }
+
+/* Change the background color for the body */
+body.skin-contrast {
+  background-color: #f0f0f0;
+}
