--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,3 +28,9 @@ footer {
 body.skin-contrast {
   background-color: #f3f6f6;
 }
+
+/* Set the main font to Gill Sans */
+body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
