--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,6 +8,10 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
 <link rel="manifest" href="/favicon/site.webmanifest" />
 
+<link rel="icon" href="/favicon/favicon.ico?v=M44lzPylqQ">
+<link rel="mask-icon" href="{{ base_path }}/favicon/safari-pinned-tab.svg?v=M44lzPylqQ" 
+ color="#000000">
+
 <!-- end custom head snippets -->
 
 <link rel="stylesheet" href="{{ '/assets/css/academicons.min.css' | relative_url }}">
