--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,9 +8,8 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
 <link rel="manifest" href="/favicon/site.webmanifest" />
 
-<link rel="icon" href="/favicon/favicon.ico?v=M44lzPylqQ">
-<link rel="mask-icon" href="{{ base_path }}/favicon/safari-pinned-tab.svg?v=M44lzPylqQ" 
- color="#000000">
+<link rel="icon" href="/favicon.ico" sizes="any">
+
 
 <!-- end custom head snippets -->
 
