--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,7 +26,7 @@ footer {
 
 /* Change the background color for the body */
 body.skin-contrast {
-  background-color: #f3f6f6;
+  background-color: #c1c9c9;
 }
 
 
