--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -65,7 +65,7 @@
 
         <li>
           <a href="https://inspirehep.net/authors/1426027" itemprop="sameAs">
-            <i class="ai ai-inspire"></i><span class="label">iNspire</span>
+            <i class="ai ai-inspire"></i><span class="label">iNspire hep</span>
           </a>
         </li>      
       
