--- a/_sass/minimal-mistakes/skins/_mint.scss
+++ b/_sass/minimal-mistakes/skins/_mint.scss
@@ -3,12 +3,12 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #f3f6f6 !default;
+$background-color: #eff7ed !default;
 $text-color: #40514e !default;
 $muted-text-color: #40514e !default;
 $primary-color: #11999e !default;
 $border-color: mix(#fff, #40514e, 75%) !default;
-$footer-background-color: #11999e !default;
+$footer-background-color: #000 !default;
 $link-color: #11999e !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
