--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -173,11 +173,13 @@
 }
 .sidebar .author__name {
   font-family: $sans-serif;
-  font-size: $type-size-5;
+  font-size: 0.92em;
 }
 
 .author__bio {
   margin: 0;
+  font-size: 0.92em;
+  #font-style: italic;
 
   @include breakpoint($large) {
     margin-top: 10px;
