--- a/_sass/minimal-mistakes/skins/_contrast.scss
+++ b/_sass/minimal-mistakes/skins/_contrast.scss
@@ -8,10 +8,11 @@ $muted-text-color: $text-color !default;
 $primary-color: #000 !default;
 $border-color: mix(#fff, $text-color, 75%) !default;
 $footer-background-color: #000 !default;
-$link-color: #11788a !default;
+$link-color: #e0970d !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
 $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
+$background-color: #f3f3f3 !default;
 
 /* contrast syntax highlighting (base16) */
 $base00: #000000 !default;
