--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -15,3 +15,5 @@
 
 <link rel="stylesheet" href="{{ '/assets/css/academicons.min.css' | relative_url }}">
 
+<link href="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/css/lightbox.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/js/lightbox-plus-jquery.min.js"></script>
